feat: add student ID card PDF generation with Playwright
- Generate multi-card PDF layout using headless Chromium via Playwright
- Embed principal signature as Base64 to avoid network dependency
- Add null safety checks for section, shift, group, class, roll, year and mobile fields
- Install missing Chromium system dependencies for Linux deployment
- Load signature image from classpath for portability across environments